--- a/pi Modelo Hamburgueria/views/menuGerente.html
+++ b/pi Modelo Hamburgueria/views/menuGerente.html
@@ -66,6 +66,7 @@
         <button class="botao" onclick="window.location.href = '/gerenciar'">Gerenciar Cardápio</button>
         <button class="botao btn-financeiro" onclick="window.location.href = '/financeiro'">Financeiro</button>
         <button class="botao btn-pedidos" onclick="window.location.href = '/dashboard'">Dashboard de Pedidos</button>
+        <button class="botao" onclick="window.location.href = '/gerenciar-funcionarios'" style="background-color: #28a745;">Gerenciar Funcionários</button>
         <button class="botao btn-danger" onclick="fazerLogout()" style="background-color: #d32f2f; margin-top: 30px;">Logout</button>
     </div>
 
