--- a/pi Modelo Hamburgueria/views/cardapioLogado.html
+++ b/pi Modelo Hamburgueria/views/cardapioLogado.html
@@ -1042,7 +1042,8 @@
             if (cart.length === 0) return;
 
             // Redirecionar para página de pagamento
-            window.location.href = 'pagamento.html';
+            window.location.href = '/pagamento';
+
         }
 
         // Inicializar carrinho ao carregar página
