--- a/pi Modelo Hamburgueria/views/cardapioLogado.html
+++ b/pi Modelo Hamburgueria/views/cardapioLogado.html
@@ -668,7 +668,7 @@
 
     <nav class="navbar navbar-expand-lg site-header fixed-top">
         <div class="container">
-            <a class="navbar-brand logo" href="#">
+            <a class="navbar-brand logo" href="/cardapio">
                 <i class="fas fa-hamburger me-2"></i>BurguerPI
             </a>
 
@@ -680,10 +680,10 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center text-center">
                     <li class="nav-item">
-                        <a href="#" class="nav-link-custom active" onclick="closeMenu()">Cardápio</a>
+                        <a href="/cardapio" class="nav-link-custom active" onclick="closeMenu()">Cardápio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="sobre.html" class="nav-link-custom" onclick="closeMenu()">Sobre</a>
+                        <a href="/sobre" class="nav-link-custom" onclick="closeMenu()">Sobre</a>
                     </li>
                     <li class="nav-item">
                         <a href="#settingsOffcanvas" onclick="closeMenu()" class="nav-link-custom"
@@ -1097,4 +1097,5 @@
         });
     </script>
 </body>
+
 </html>
